--- a/PWNB_ENTREGAS/PWNB-Semana#13/ADO 2/style.css
+++ b/PWNB_ENTREGAS/PWNB-Semana#13/ADO 2/style.css
@@ -35,6 +35,11 @@ input,select {
     border-radius: 3px;
 }
 
+a{
+    color: #fff;
+    text-decoration: none;
+}
+
 select {
     height: 40px;
     width: 99%;
